@@ -1,26 +1,32 @@
 package hotel.view.action.booking;
 
-import hotel.controller.AdminController;
 import hotel.dto.CreateBookingRequest;
 import hotel.model.booking.Bookings;
 import hotel.model.filter.RoomFilter;
 import hotel.model.room.Room;
 import hotel.model.room.RoomStatus;
 import hotel.model.users.client.Client;
+import hotel.service.*;
 import hotel.view.action.BaseAction;
 
+import java.sql.SQLException;
 import java.time.LocalDate;
-import java.util.Collection;
-import java.util.List;
-import java.util.Optional;
-import java.util.Scanner;
+import java.util.*;
 import java.util.stream.Collectors;
 
 public class UpdateBookingAction extends BaseAction {
-    private final AdminController adminController;
-    public UpdateBookingAction(Scanner scanner, AdminController adminController) {
+    private final ClientService clientService;
+    private final RoomService roomService;
+    private final BookingService bookingService;
+
+    public UpdateBookingAction(ClientService clientService,
+                               RoomService roomService,
+                               BookingService bookingService,
+                               Scanner scanner) {
         super(scanner);
-        this.adminController = adminController;
+        this.clientService = clientService;
+        this.roomService = roomService;
+        this.bookingService = bookingService;
     }
 
     @Override
@@ -28,10 +34,9 @@ public class UpdateBookingAction extends BaseAction {
         try {
             System.out.println("\n=== ОБНОВЛЕНИЕ БРОНИРОВАНИЯ ===");
 
-            // Получение текущего бронирования
             int bookingId = readInt("Введите ID бронирования для обновления: ");
 
-            Optional<Bookings> existingBooking = adminController.getBookingById(bookingId);
+            Optional<Bookings> existingBooking = bookingService.getBookingById(bookingId);
             if (existingBooking.isEmpty()) {
                 System.out.println("Бронирование с ID " + bookingId + " не найдено.");
                 return;
@@ -39,40 +44,55 @@ public class UpdateBookingAction extends BaseAction {
 
             Bookings booking = existingBooking.get();
             System.out.println("\nТекущие данные бронирования:");
-            printBookingDetails(booking);
+            printBookingSummary(booking);
 
-            // Выбор клиента (можно оставить текущего)
+            System.out.println("\n--- ОБНОВЛЕНИЕ КЛИЕНТА ---");
+            System.out.println("Текущий клиент: " + clientService.findById(booking.getClient()).get());
+
             System.out.println("\nВыберите нового клиента (оставьте пустым, чтобы не менять):");
-            Collection<Client> clients = adminController.getInfoAboutClientDatabase(null);
+            Collection<Client> clients = clientService.findAll();
             clients.forEach(client ->
-                    System.out.println("ID: " + client.getId() + " | " + client.getName()));
+                    System.out.println("ID: " + client.getId() + " | " +
+                            client.getSurname() + " " + client.getName() + " " + client.getPatronymic()));
 
             String clientInput = readString("Введите ID клиента или нажмите Enter: ");
-            int clientId = clientInput.isEmpty() ? booking.getClient().getId() : Integer.parseInt(clientInput);
+            int clientId = clientInput.isEmpty() ?
+                    booking.getClient() : Integer.parseInt(clientInput);
+
+            System.out.println("\n--- ОБНОВЛЕНИЕ КОМНАТЫ ---");
+            System.out.println("Текущая комната: №" + booking.getRoom());
 
             System.out.println("\nВыберите новую комнату (оставьте пустым, чтобы не менять):");
-            List<Room> availableRooms = adminController.requestListRoom(RoomFilter.ID).stream()
+            List<Room> availableRooms = roomService.findAll().stream()
                     .filter(room -> room.getStatus() == RoomStatus.AVAILABLE ||
-                            room.getId() == booking.getRoom().getId())
-                    .collect(Collectors.toList());
+                            Objects.equals(room.getId(), booking.getRoom()))
+                    .toList();
 
-            availableRooms.forEach(room ->
-                    System.out.println("ID: " + room.getId() + " | №" + room.getNumber() +
-                            " | Тип: " + room.getType() + " | Цена: $" + room.getPrice()));
+            if (availableRooms.isEmpty()) {
+                System.out.println("Нет доступных комнат для замены.");
+                System.out.println("Сохранена текущая комната.");
+            } else {
+                availableRooms.forEach(room ->
+                        System.out.println("ID: " + room.getId() + " | №" + room.getNumber() +
+                                " | Тип: " + room.getType() +
+                                " | Цена: $" + room.getPrice() +
+                                " | Статус: " + room.getStatus()));
+            }
 
             String roomInput = readString("Введите ID комнаты или нажмите Enter: ");
-            int roomId = roomInput.isEmpty() ? booking.getRoom().getId() : Integer.parseInt(roomInput);
+            int roomId = roomInput.isEmpty() ? booking.getRoom() : Integer.parseInt(roomInput);
 
-            System.out.println("\nВведите новые даты (оставьте пустым, чтобы не менять):");
+            System.out.println("\n--- ОБНОВЛЕНИЕ ДАТ ПРЕБЫВАНИЯ ---");
+            System.out.println("Текущие даты: " + booking.getCheckInDate() + " - " + booking.getCheckOutDate());
 
             LocalDate checkInDate = booking.getCheckInDate();
-            String checkInInput = readString("Дата заезда [" + checkInDate + "]: ");
+            String checkInInput = readString("Дата заезда [" + checkInDate + "] (оставьте пустым чтобы не менять): ");
             if (!checkInInput.isEmpty()) {
                 checkInDate = LocalDate.parse(checkInInput);
             }
 
             LocalDate checkOutDate = booking.getCheckOutDate();
-            String checkOutInput = readString("Дата выезда [" + checkOutDate + "]: ");
+            String checkOutInput = readString("Дата выезда [" + checkOutDate + "] (оставьте пустым чтобы не менять): ");
             if (!checkOutInput.isEmpty()) {
                 checkOutDate = LocalDate.parse(checkOutInput);
             }
@@ -82,13 +102,17 @@ public class UpdateBookingAction extends BaseAction {
                 return;
             }
 
-            CreateBookingRequest request = new CreateBookingRequest(clientId, roomId, checkInDate, checkOutDate);
+            CreateBookingRequest request = new CreateBookingRequest(
+                    clientId, roomId, checkInDate, checkOutDate,
+                    booking.getServices(), booking.getStatus()
+            );
 
-            var result = adminController.updateBooking(request, bookingId);
+            Optional<Bookings> result = bookingService.updateBooking(request, bookingId);
 
             if (result.isPresent()) {
                 System.out.println("\nБронирование успешно обновлено!");
-                printBookingDetails(result.get());
+                System.out.println("\nОбновленные данные:");
+                printBookingSummary(result.get());
             } else {
                 System.out.println("Не удалось обновить бронирование.");
             }
@@ -97,12 +121,14 @@ public class UpdateBookingAction extends BaseAction {
             System.out.println("Ошибка при обновлении бронирования: " + e.getMessage());
         }
     }
-    private void printBookingDetails(Bookings booking) {
+
+    private void printBookingSummary(Bookings booking) throws SQLException {
         System.out.println("ID бронирования: " + booking.getId());
-        System.out.println("Клиент: " + booking.getClient().getName() + " (ID: " + booking.getClient().getId() + ")");
-        System.out.println("Комната: №" + booking.getRoom().getNumber() + " (ID: " + booking.getRoom().getId() + ")");
+        System.out.println("Клиент: " + clientService.findById(booking.getClient()).get());
+        System.out.println("Комната: №" + booking.getRoom());
         System.out.println("Дата заезда: " + booking.getCheckInDate());
         System.out.println("Дата выезда: " + booking.getCheckOutDate());
+        System.out.println("Статус: " + booking.getStatus());
         System.out.println("Общая стоимость: $" + booking.getTotalPrice());
     }
 }
